force-app/main/default/objects/Product__c/fields/Brand__c.field-meta.xml
<CustomField>

    
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Text</type>
        <length>255</length>
    
</CustomField>