force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>

    
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Lookup</type>
        <referenceTo>Category__c</referenceTo>
        <relationshipName>Products</relationshipName>
    
</CustomField>