force-app/main/default/objects/Product__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>

    
        <fullName>Delivery_Time__c</fullName>
        <label>Delivery Time (Days)</label>
        <type>Number</type>
        <scale>0</scale>
        <precision>3</precision>
    
</CustomField>