force-app/main/default/objects/Product__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>

    
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <type>Percent</type>
        <scale>2</scale>
        <precision>5</precision>
    
</CustomField>