force-app/main/default/objects/Product__c/fields/Image_URL__c.field-meta.xml
<CustomField>

    
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    
</CustomField>