force-app/main/default/objects/Product__c/fields/Prime_Eligible__c.field-meta.xml
<CustomField>

    
        <fullName>Prime_Eligible__c</fullName>
        <label>Prime Eligible</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    
</CustomField>