force-app/main/default/objects/Product__c/fields/Rating__c.field-meta.xml
<CustomField>

    
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Number</type>
        <scale>1</scale>
        <precision>2</precision>
    
</CustomField>