force-app/main/default/objects/Product__c/fields/Stock__c.field-meta.xml
<CustomField>

    
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <type>Number</type>
        <scale>0</scale>
        <precision>18</precision>
    
</CustomField>